package ar.utn.ba.ddsi.models.entities.fuentes;

public enum TipoFuente {
  ESTATICA,
  DINAMICA,
  PROXY
}
